gitea/gitea-pg-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea-pg
  labels:
    app: gitea
spec:
  ports:
    - port: 5432
  selector:
    app: gitea
    # tier: postgres
  clusterIP: None
