gitea/gitea-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea-web
  labels:
    app: gitea
spec:
  ports:
    - port: 3000
  selector:
    app: gitea
    tier: frontend
  type: LoadBalancer
