gitea/gitea-ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: gitea-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: default
spec:
  rules:
    - host: helloworld.com
      http:
        paths:
          - backend:
              serviceName: gitea-service
              servicePort: 3000
